[package]
name = "benchmark_gui"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.5.3", package = "libadwaita", features = ["v1_4"] }
async-channel = "2.1.1"
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"] }

[profile.release]
strip = true
lto = true
panic = "abort"

[profile.dev]
panic = "abort"
